parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> function_defs main
Rule 2     function_defs -> function_def
Rule 3     function_defs -> function_defs function_def
Rule 4     main -> VOID MAIN ( ) { program }
Rule 5     function_def -> FUNC ID ( list ) { program }
Rule 6     program -> stmt
Rule 7     program -> program stmt
Rule 8     stmt -> expr ;
Rule 9     stmt -> RETURN expr ;
Rule 10    stmt -> STOP ;
Rule 11    stmt -> SKIP ;
Rule 12    stmt -> ;
Rule 13    stmt -> { }
Rule 14    stmt_list -> stmt
Rule 15    stmt_list -> stmt_list stmt
Rule 16    stmt -> { stmt_list }
Rule 17    stmt -> OUT list ;
Rule 18    expr -> INTNUM
Rule 19    expr -> FLOATNUM
Rule 20    expr -> STR
Rule 21    expr -> expr ADD expr
Rule 22    expr -> expr SUB expr
Rule 23    expr -> expr MUL expr
Rule 24    expr -> expr DIV expr
Rule 25    expr -> expr MOD expr
Rule 26    expr -> expr GT expr
Rule 27    expr -> expr LT expr
Rule 28    expr -> expr GTE expr
Rule 29    expr -> expr LTE expr
Rule 30    expr -> expr EQ expr
Rule 31    expr -> expr NEQ expr
Rule 32    expr -> ID ( list )
Rule 33    expr -> ID ( )
Rule 34    expr -> lvalue ASSIGN expr
Rule 35    expr -> lvalue ADD_ASSIGN expr
Rule 36    expr -> lvalue SUB_ASSIGN expr
Rule 37    expr -> lvalue MUL_ASSIGN expr
Rule 38    expr -> lvalue DIV_ASSIGN expr
Rule 39    expr -> lvalue MOD_ASSIGN expr
Rule 40    expr -> expr '
Rule 41    lvalue -> ID
Rule 42    expr -> SUB expr
Rule 43    expr -> lvalue
Rule 44    expr -> ( expr )
Rule 45    lvalue -> expr [ list ]
Rule 46    expr -> [ ]
Rule 47    expr -> [ list ]
Rule 48    list -> expr
Rule 49    list -> range
Rule 50    list -> list , expr
Rule 51    list -> list , range
Rule 52    stmt -> IFF ( expr ) stmt
Rule 53    stmt -> IFF ( expr ) stmt ELSE stmt
Rule 54    stmt -> UNTIL ( expr ) stmt
Rule 55    range -> expr : expr
Rule 56    stmt -> FOR ( ID ASSIGN range ) stmt

Terminals, with rules where they appear

'                    : 40
(                    : 4 5 32 33 44 52 53 54 56
)                    : 4 5 32 33 44 52 53 54 56
,                    : 50 51
:                    : 55
;                    : 8 9 10 11 12 17
ADD                  : 21
ADD_ASSIGN           : 35
ASSIGN               : 34 56
DIV                  : 24
DIV_ASSIGN           : 38
ELSE                 : 53
EQ                   : 30
FLOATNUM             : 19
FOR                  : 56
FUNC                 : 5
GT                   : 26
GTE                  : 28
ID                   : 5 32 33 41 56
IFF                  : 52 53
INTNUM               : 18
LT                   : 27
LTE                  : 29
MAIN                 : 4
MOD                  : 25
MOD_ASSIGN           : 39
MUL                  : 23
MUL_ASSIGN           : 37
NEQ                  : 31
OUT                  : 17
RETURN               : 9
SKIP                 : 11
STOP                 : 10
STR                  : 20
SUB                  : 22 42
SUB_ASSIGN           : 36
UNTIL                : 54
VOID                 : 4
[                    : 45 46 47
]                    : 45 46 47
error                : 
{                    : 4 5 13 16
}                    : 4 5 13 16

Nonterminals, with rules where they appear

expr                 : 8 9 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 34 35 36 37 38 39 40 42 44 45 48 50 52 53 54 55 55
function_def         : 2 3
function_defs        : 1 3
list                 : 5 17 32 45 47 50 51
lvalue               : 34 35 36 37 38 39 43
main                 : 1
program              : 4 5 7
range                : 49 51 56
start                : 0
stmt                 : 6 7 14 15 52 53 53 54 56
stmt_list            : 15 16

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . function_defs main
    (2) function_defs -> . function_def
    (3) function_defs -> . function_defs function_def
    (5) function_def -> . FUNC ID ( list ) { program }

    FUNC            shift and go to state 4

    start                          shift and go to state 1
    function_defs                  shift and go to state 2
    function_def                   shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> function_defs . main
    (3) function_defs -> function_defs . function_def
    (4) main -> . VOID MAIN ( ) { program }
    (5) function_def -> . FUNC ID ( list ) { program }

    VOID            shift and go to state 7
    FUNC            shift and go to state 4

    main                           shift and go to state 5
    function_def                   shift and go to state 6

state 3

    (2) function_defs -> function_def .

    VOID            reduce using rule 2 (function_defs -> function_def .)
    FUNC            reduce using rule 2 (function_defs -> function_def .)


state 4

    (5) function_def -> FUNC . ID ( list ) { program }

    ID              shift and go to state 8


state 5

    (1) start -> function_defs main .

    $end            reduce using rule 1 (start -> function_defs main .)


state 6

    (3) function_defs -> function_defs function_def .

    VOID            reduce using rule 3 (function_defs -> function_defs function_def .)
    FUNC            reduce using rule 3 (function_defs -> function_defs function_def .)


state 7

    (4) main -> VOID . MAIN ( ) { program }

    MAIN            shift and go to state 9


state 8

    (5) function_def -> FUNC ID . ( list ) { program }

    (               shift and go to state 10


state 9

    (4) main -> VOID MAIN . ( ) { program }

    (               shift and go to state 11


state 10

    (5) function_def -> FUNC ID ( . list ) { program }
    (48) list -> . expr
    (49) list -> . range
    (50) list -> . list , expr
    (51) list -> . list , range
    (18) expr -> . INTNUM
    (19) expr -> . FLOATNUM
    (20) expr -> . STR
    (21) expr -> . expr ADD expr
    (22) expr -> . expr SUB expr
    (23) expr -> . expr MUL expr
    (24) expr -> . expr DIV expr
    (25) expr -> . expr MOD expr
    (26) expr -> . expr GT expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GTE expr
    (29) expr -> . expr LTE expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr NEQ expr
    (32) expr -> . ID ( list )
    (33) expr -> . ID ( )
    (34) expr -> . lvalue ASSIGN expr
    (35) expr -> . lvalue ADD_ASSIGN expr
    (36) expr -> . lvalue SUB_ASSIGN expr
    (37) expr -> . lvalue MUL_ASSIGN expr
    (38) expr -> . lvalue DIV_ASSIGN expr
    (39) expr -> . lvalue MOD_ASSIGN expr
    (40) expr -> . expr '
    (42) expr -> . SUB expr
    (43) expr -> . lvalue
    (44) expr -> . ( expr )
    (46) expr -> . [ ]
    (47) expr -> . [ list ]
    (55) range -> . expr : expr
    (41) lvalue -> . ID
    (45) lvalue -> . expr [ list ]

    INTNUM          shift and go to state 17
    FLOATNUM        shift and go to state 18
    STR             shift and go to state 19
    ID              shift and go to state 12
    SUB             shift and go to state 20
    (               shift and go to state 13
    [               shift and go to state 22

    list                           shift and go to state 14
    expr                           shift and go to state 15
    range                          shift and go to state 16
    lvalue                         shift and go to state 21

state 11

    (4) main -> VOID MAIN ( . ) { program }

    )               shift and go to state 23


state 12

    (32) expr -> ID . ( list )
    (33) expr -> ID . ( )
    (41) lvalue -> ID .

    (               shift and go to state 24
    ASSIGN          reduce using rule 41 (lvalue -> ID .)
    ADD_ASSIGN      reduce using rule 41 (lvalue -> ID .)
    SUB_ASSIGN      reduce using rule 41 (lvalue -> ID .)
    MUL_ASSIGN      reduce using rule 41 (lvalue -> ID .)
    DIV_ASSIGN      reduce using rule 41 (lvalue -> ID .)
    MOD_ASSIGN      reduce using rule 41 (lvalue -> ID .)
    ADD             reduce using rule 41 (lvalue -> ID .)
    SUB             reduce using rule 41 (lvalue -> ID .)
    MUL             reduce using rule 41 (lvalue -> ID .)
    DIV             reduce using rule 41 (lvalue -> ID .)
    MOD             reduce using rule 41 (lvalue -> ID .)
    GT              reduce using rule 41 (lvalue -> ID .)
    LT              reduce using rule 41 (lvalue -> ID .)
    GTE             reduce using rule 41 (lvalue -> ID .)
    LTE             reduce using rule 41 (lvalue -> ID .)
    EQ              reduce using rule 41 (lvalue -> ID .)
    NEQ             reduce using rule 41 (lvalue -> ID .)
    '               reduce using rule 41 (lvalue -> ID .)
    :               reduce using rule 41 (lvalue -> ID .)
    [               reduce using rule 41 (lvalue -> ID .)
    )               reduce using rule 41 (lvalue -> ID .)
    ,               reduce using rule 41 (lvalue -> ID .)
    ]               reduce using rule 41 (lvalue -> ID .)
    ;               reduce using rule 41 (lvalue -> ID .)


state 13

    (44) expr -> ( . expr )
    (18) expr -> . INTNUM
    (19) expr -> . FLOATNUM
    (20) expr -> . STR
    (21) expr -> . expr ADD expr
    (22) expr -> . expr SUB expr
    (23) expr -> . expr MUL expr
    (24) expr -> . expr DIV expr
    (25) expr -> . expr MOD expr
    (26) expr -> . expr GT expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GTE expr
    (29) expr -> . expr LTE expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr NEQ expr
    (32) expr -> . ID ( list )
    (33) expr -> . ID ( )
    (34) expr -> . lvalue ASSIGN expr
    (35) expr -> . lvalue ADD_ASSIGN expr
    (36) expr -> . lvalue SUB_ASSIGN expr
    (37) expr -> . lvalue MUL_ASSIGN expr
    (38) expr -> . lvalue DIV_ASSIGN expr
    (39) expr -> . lvalue MOD_ASSIGN expr
    (40) expr -> . expr '
    (42) expr -> . SUB expr
    (43) expr -> . lvalue
    (44) expr -> . ( expr )
    (46) expr -> . [ ]
    (47) expr -> . [ list ]
    (41) lvalue -> . ID
    (45) lvalue -> . expr [ list ]

    INTNUM          shift and go to state 17
    FLOATNUM        shift and go to state 18
    STR             shift and go to state 19
    ID              shift and go to state 12
    SUB             shift and go to state 20
    (               shift and go to state 13
    [               shift and go to state 22

    expr                           shift and go to state 25
    lvalue                         shift and go to state 21

state 14

    (5) function_def -> FUNC ID ( list . ) { program }
    (50) list -> list . , expr
    (51) list -> list . , range

    )               shift and go to state 26
    ,               shift and go to state 27


state 15

    (48) list -> expr .
    (21) expr -> expr . ADD expr
    (22) expr -> expr . SUB expr
    (23) expr -> expr . MUL expr
    (24) expr -> expr . DIV expr
    (25) expr -> expr . MOD expr
    (26) expr -> expr . GT expr
    (27) expr -> expr . LT expr
    (28) expr -> expr . GTE expr
    (29) expr -> expr . LTE expr
    (30) expr -> expr . EQ expr
    (31) expr -> expr . NEQ expr
    (40) expr -> expr . '
    (55) range -> expr . : expr
    (45) lvalue -> expr . [ list ]

    )               reduce using rule 48 (list -> expr .)
    ,               reduce using rule 48 (list -> expr .)
    ]               reduce using rule 48 (list -> expr .)
    ;               reduce using rule 48 (list -> expr .)
    ADD             shift and go to state 28
    SUB             shift and go to state 29
    MUL             shift and go to state 30
    DIV             shift and go to state 31
    MOD             shift and go to state 32
    GT              shift and go to state 33
    LT              shift and go to state 34
    GTE             shift and go to state 35
    LTE             shift and go to state 36
    EQ              shift and go to state 37
    NEQ             shift and go to state 38
    '               shift and go to state 39
    :               shift and go to state 40
    [               shift and go to state 41


state 16

    (49) list -> range .

    )               reduce using rule 49 (list -> range .)
    ,               reduce using rule 49 (list -> range .)
    ]               reduce using rule 49 (list -> range .)
    ;               reduce using rule 49 (list -> range .)


state 17

    (18) expr -> INTNUM .

    ADD             reduce using rule 18 (expr -> INTNUM .)
    SUB             reduce using rule 18 (expr -> INTNUM .)
    MUL             reduce using rule 18 (expr -> INTNUM .)
    DIV             reduce using rule 18 (expr -> INTNUM .)
    MOD             reduce using rule 18 (expr -> INTNUM .)
    GT              reduce using rule 18 (expr -> INTNUM .)
    LT              reduce using rule 18 (expr -> INTNUM .)
    GTE             reduce using rule 18 (expr -> INTNUM .)
    LTE             reduce using rule 18 (expr -> INTNUM .)
    EQ              reduce using rule 18 (expr -> INTNUM .)
    NEQ             reduce using rule 18 (expr -> INTNUM .)
    '               reduce using rule 18 (expr -> INTNUM .)
    :               reduce using rule 18 (expr -> INTNUM .)
    [               reduce using rule 18 (expr -> INTNUM .)
    )               reduce using rule 18 (expr -> INTNUM .)
    ,               reduce using rule 18 (expr -> INTNUM .)
    ]               reduce using rule 18 (expr -> INTNUM .)
    ;               reduce using rule 18 (expr -> INTNUM .)


state 18

    (19) expr -> FLOATNUM .

    ADD             reduce using rule 19 (expr -> FLOATNUM .)
    SUB             reduce using rule 19 (expr -> FLOATNUM .)
    MUL             reduce using rule 19 (expr -> FLOATNUM .)
    DIV             reduce using rule 19 (expr -> FLOATNUM .)
    MOD             reduce using rule 19 (expr -> FLOATNUM .)
    GT              reduce using rule 19 (expr -> FLOATNUM .)
    LT              reduce using rule 19 (expr -> FLOATNUM .)
    GTE             reduce using rule 19 (expr -> FLOATNUM .)
    LTE             reduce using rule 19 (expr -> FLOATNUM .)
    EQ              reduce using rule 19 (expr -> FLOATNUM .)
    NEQ             reduce using rule 19 (expr -> FLOATNUM .)
    '               reduce using rule 19 (expr -> FLOATNUM .)
    :               reduce using rule 19 (expr -> FLOATNUM .)
    [               reduce using rule 19 (expr -> FLOATNUM .)
    )               reduce using rule 19 (expr -> FLOATNUM .)
    ,               reduce using rule 19 (expr -> FLOATNUM .)
    ]               reduce using rule 19 (expr -> FLOATNUM .)
    ;               reduce using rule 19 (expr -> FLOATNUM .)


state 19

    (20) expr -> STR .

    ADD             reduce using rule 20 (expr -> STR .)
    SUB             reduce using rule 20 (expr -> STR .)
    MUL             reduce using rule 20 (expr -> STR .)
    DIV             reduce using rule 20 (expr -> STR .)
    MOD             reduce using rule 20 (expr -> STR .)
    GT              reduce using rule 20 (expr -> STR .)
    LT              reduce using rule 20 (expr -> STR .)
    GTE             reduce using rule 20 (expr -> STR .)
    LTE             reduce using rule 20 (expr -> STR .)
    EQ              reduce using rule 20 (expr -> STR .)
    NEQ             reduce using rule 20 (expr -> STR .)
    '               reduce using rule 20 (expr -> STR .)
    :               reduce using rule 20 (expr -> STR .)
    [               reduce using rule 20 (expr -> STR .)
    )               reduce using rule 20 (expr -> STR .)
    ,               reduce using rule 20 (expr -> STR .)
    ]               reduce using rule 20 (expr -> STR .)
    ;               reduce using rule 20 (expr -> STR .)


state 20

    (42) expr -> SUB . expr
    (18) expr -> . INTNUM
    (19) expr -> . FLOATNUM
    (20) expr -> . STR
    (21) expr -> . expr ADD expr
    (22) expr -> . expr SUB expr
    (23) expr -> . expr MUL expr
    (24) expr -> . expr DIV expr
    (25) expr -> . expr MOD expr
    (26) expr -> . expr GT expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GTE expr
    (29) expr -> . expr LTE expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr NEQ expr
    (32) expr -> . ID ( list )
    (33) expr -> . ID ( )
    (34) expr -> . lvalue ASSIGN expr
    (35) expr -> . lvalue ADD_ASSIGN expr
    (36) expr -> . lvalue SUB_ASSIGN expr
    (37) expr -> . lvalue MUL_ASSIGN expr
    (38) expr -> . lvalue DIV_ASSIGN expr
    (39) expr -> . lvalue MOD_ASSIGN expr
    (40) expr -> . expr '
    (42) expr -> . SUB expr
    (43) expr -> . lvalue
    (44) expr -> . ( expr )
    (46) expr -> . [ ]
    (47) expr -> . [ list ]
    (41) lvalue -> . ID
    (45) lvalue -> . expr [ list ]

    INTNUM          shift and go to state 17
    FLOATNUM        shift and go to state 18
    STR             shift and go to state 19
    ID              shift and go to state 12
    SUB             shift and go to state 20
    (               shift and go to state 13
    [               shift and go to state 22

    expr                           shift and go to state 42
    lvalue                         shift and go to state 21

state 21

    (34) expr -> lvalue . ASSIGN expr
    (35) expr -> lvalue . ADD_ASSIGN expr
    (36) expr -> lvalue . SUB_ASSIGN expr
    (37) expr -> lvalue . MUL_ASSIGN expr
    (38) expr -> lvalue . DIV_ASSIGN expr
    (39) expr -> lvalue . MOD_ASSIGN expr
    (43) expr -> lvalue .

    ASSIGN          shift and go to state 43
    ADD_ASSIGN      shift and go to state 44
    SUB_ASSIGN      shift and go to state 45
    MUL_ASSIGN      shift and go to state 46
    DIV_ASSIGN      shift and go to state 47
    MOD_ASSIGN      shift and go to state 48
    ADD             reduce using rule 43 (expr -> lvalue .)
    SUB             reduce using rule 43 (expr -> lvalue .)
    MUL             reduce using rule 43 (expr -> lvalue .)
    DIV             reduce using rule 43 (expr -> lvalue .)
    MOD             reduce using rule 43 (expr -> lvalue .)
    GT              reduce using rule 43 (expr -> lvalue .)
    LT              reduce using rule 43 (expr -> lvalue .)
    GTE             reduce using rule 43 (expr -> lvalue .)
    LTE             reduce using rule 43 (expr -> lvalue .)
    EQ              reduce using rule 43 (expr -> lvalue .)
    NEQ             reduce using rule 43 (expr -> lvalue .)
    '               reduce using rule 43 (expr -> lvalue .)
    :               reduce using rule 43 (expr -> lvalue .)
    [               reduce using rule 43 (expr -> lvalue .)
    )               reduce using rule 43 (expr -> lvalue .)
    ,               reduce using rule 43 (expr -> lvalue .)
    ]               reduce using rule 43 (expr -> lvalue .)
    ;               reduce using rule 43 (expr -> lvalue .)


state 22

    (46) expr -> [ . ]
    (47) expr -> [ . list ]
    (48) list -> . expr
    (49) list -> . range
    (50) list -> . list , expr
    (51) list -> . list , range
    (18) expr -> . INTNUM
    (19) expr -> . FLOATNUM
    (20) expr -> . STR
    (21) expr -> . expr ADD expr
    (22) expr -> . expr SUB expr
    (23) expr -> . expr MUL expr
    (24) expr -> . expr DIV expr
    (25) expr -> . expr MOD expr
    (26) expr -> . expr GT expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GTE expr
    (29) expr -> . expr LTE expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr NEQ expr
    (32) expr -> . ID ( list )
    (33) expr -> . ID ( )
    (34) expr -> . lvalue ASSIGN expr
    (35) expr -> . lvalue ADD_ASSIGN expr
    (36) expr -> . lvalue SUB_ASSIGN expr
    (37) expr -> . lvalue MUL_ASSIGN expr
    (38) expr -> . lvalue DIV_ASSIGN expr
    (39) expr -> . lvalue MOD_ASSIGN expr
    (40) expr -> . expr '
    (42) expr -> . SUB expr
    (43) expr -> . lvalue
    (44) expr -> . ( expr )
    (46) expr -> . [ ]
    (47) expr -> . [ list ]
    (55) range -> . expr : expr
    (41) lvalue -> . ID
    (45) lvalue -> . expr [ list ]

    ]               shift and go to state 49
    INTNUM          shift and go to state 17
    FLOATNUM        shift and go to state 18
    STR             shift and go to state 19
    ID              shift and go to state 12
    SUB             shift and go to state 20
    (               shift and go to state 13
    [               shift and go to state 22

    list                           shift and go to state 50
    expr                           shift and go to state 15
    range                          shift and go to state 16
    lvalue                         shift and go to state 21

state 23

    (4) main -> VOID MAIN ( ) . { program }

    {               shift and go to state 51


state 24

    (32) expr -> ID ( . list )
    (33) expr -> ID ( . )
    (48) list -> . expr
    (49) list -> . range
    (50) list -> . list , expr
    (51) list -> . list , range
    (18) expr -> . INTNUM
    (19) expr -> . FLOATNUM
    (20) expr -> . STR
    (21) expr -> . expr ADD expr
    (22) expr -> . expr SUB expr
    (23) expr -> . expr MUL expr
    (24) expr -> . expr DIV expr
    (25) expr -> . expr MOD expr
    (26) expr -> . expr GT expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GTE expr
    (29) expr -> . expr LTE expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr NEQ expr
    (32) expr -> . ID ( list )
    (33) expr -> . ID ( )
    (34) expr -> . lvalue ASSIGN expr
    (35) expr -> . lvalue ADD_ASSIGN expr
    (36) expr -> . lvalue SUB_ASSIGN expr
    (37) expr -> . lvalue MUL_ASSIGN expr
    (38) expr -> . lvalue DIV_ASSIGN expr
    (39) expr -> . lvalue MOD_ASSIGN expr
    (40) expr -> . expr '
    (42) expr -> . SUB expr
    (43) expr -> . lvalue
    (44) expr -> . ( expr )
    (46) expr -> . [ ]
    (47) expr -> . [ list ]
    (55) range -> . expr : expr
    (41) lvalue -> . ID
    (45) lvalue -> . expr [ list ]

    )               shift and go to state 53
    INTNUM          shift and go to state 17
    FLOATNUM        shift and go to state 18
    STR             shift and go to state 19
    ID              shift and go to state 12
    SUB             shift and go to state 20
    (               shift and go to state 13
    [               shift and go to state 22

    list                           shift and go to state 52
    expr                           shift and go to state 15
    range                          shift and go to state 16
    lvalue                         shift and go to state 21

state 25

    (44) expr -> ( expr . )
    (21) expr -> expr . ADD expr
    (22) expr -> expr . SUB expr
    (23) expr -> expr . MUL expr
    (24) expr -> expr . DIV expr
    (25) expr -> expr . MOD expr
    (26) expr -> expr . GT expr
    (27) expr -> expr . LT expr
    (28) expr -> expr . GTE expr
    (29) expr -> expr . LTE expr
    (30) expr -> expr . EQ expr
    (31) expr -> expr . NEQ expr
    (40) expr -> expr . '
    (45) lvalue -> expr . [ list ]

    )               shift and go to state 54
    ADD             shift and go to state 28
    SUB             shift and go to state 29
    MUL             shift and go to state 30
    DIV             shift and go to state 31
    MOD             shift and go to state 32
    GT              shift and go to state 33
    LT              shift and go to state 34
    GTE             shift and go to state 35
    LTE             shift and go to state 36
    EQ              shift and go to state 37
    NEQ             shift and go to state 38
    '               shift and go to state 39
    [               shift and go to state 41


state 26

    (5) function_def -> FUNC ID ( list ) . { program }

    {               shift and go to state 55


state 27

    (50) list -> list , . expr
    (51) list -> list , . range
    (18) expr -> . INTNUM
    (19) expr -> . FLOATNUM
    (20) expr -> . STR
    (21) expr -> . expr ADD expr
    (22) expr -> . expr SUB expr
    (23) expr -> . expr MUL expr
    (24) expr -> . expr DIV expr
    (25) expr -> . expr MOD expr
    (26) expr -> . expr GT expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GTE expr
    (29) expr -> . expr LTE expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr NEQ expr
    (32) expr -> . ID ( list )
    (33) expr -> . ID ( )
    (34) expr -> . lvalue ASSIGN expr
    (35) expr -> . lvalue ADD_ASSIGN expr
    (36) expr -> . lvalue SUB_ASSIGN expr
    (37) expr -> . lvalue MUL_ASSIGN expr
    (38) expr -> . lvalue DIV_ASSIGN expr
    (39) expr -> . lvalue MOD_ASSIGN expr
    (40) expr -> . expr '
    (42) expr -> . SUB expr
    (43) expr -> . lvalue
    (44) expr -> . ( expr )
    (46) expr -> . [ ]
    (47) expr -> . [ list ]
    (55) range -> . expr : expr
    (41) lvalue -> . ID
    (45) lvalue -> . expr [ list ]

    INTNUM          shift and go to state 17
    FLOATNUM        shift and go to state 18
    STR             shift and go to state 19
    ID              shift and go to state 12
    SUB             shift and go to state 20
    (               shift and go to state 13
    [               shift and go to state 22

    expr                           shift and go to state 56
    range                          shift and go to state 57
    lvalue                         shift and go to state 21

state 28

    (21) expr -> expr ADD . expr
    (18) expr -> . INTNUM
    (19) expr -> . FLOATNUM
    (20) expr -> . STR
    (21) expr -> . expr ADD expr
    (22) expr -> . expr SUB expr
    (23) expr -> . expr MUL expr
    (24) expr -> . expr DIV expr
    (25) expr -> . expr MOD expr
    (26) expr -> . expr GT expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GTE expr
    (29) expr -> . expr LTE expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr NEQ expr
    (32) expr -> . ID ( list )
    (33) expr -> . ID ( )
    (34) expr -> . lvalue ASSIGN expr
    (35) expr -> . lvalue ADD_ASSIGN expr
    (36) expr -> . lvalue SUB_ASSIGN expr
    (37) expr -> . lvalue MUL_ASSIGN expr
    (38) expr -> . lvalue DIV_ASSIGN expr
    (39) expr -> . lvalue MOD_ASSIGN expr
    (40) expr -> . expr '
    (42) expr -> . SUB expr
    (43) expr -> . lvalue
    (44) expr -> . ( expr )
    (46) expr -> . [ ]
    (47) expr -> . [ list ]
    (41) lvalue -> . ID
    (45) lvalue -> . expr [ list ]

    INTNUM          shift and go to state 17
    FLOATNUM        shift and go to state 18
    STR             shift and go to state 19
    ID              shift and go to state 12
    SUB             shift and go to state 20
    (               shift and go to state 13
    [               shift and go to state 22

    expr                           shift and go to state 58
    lvalue                         shift and go to state 21

state 29
